modified:   index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           >
         </li>
         <li>
-          <a href="https://github.com/gustavo124l" target="_blank"
+          <a href="https://github.com/gustavo124lg" target="_blank"
             >Veja meu Portifolio</a
           >
         </li>
@@ -46,7 +46,7 @@
         </li>
       </ul>
       <div id="social-links">
-        <a href="https://github.com/gustavo124l" target="_blank">
+        <a href="https://github.com/gustavo124lg" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
         <a href="https://instagram.com/gustavo124l" target="_blank">
@@ -55,7 +55,7 @@
         <a href="https://linkedin.com/in/luiz-franco124" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
-        <a href="https://github.com/gustavo124l" target="_blank">
+        <a href="#" target="_blank">
           <ion-icon name="code-slash-outline"></ion-icon>
         </a>
       </div>
